@@ -1,3 +1,7 @@
+Oct 18, 2007 - chris
+o bugfix: when moving a cursor through duplicates and the cache was
+	exhausted, an assert was triggered - fixed
+
 Oct 16, 2007 - chris
 o bugfix: ham_close in an environment could lead to a segmentation fault, 
 	because the cache for extended keys was not properly set up, before
